[package]
name = "hantune-logserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_with = "3"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "std"] }
process_vm_io = "1"